--- a/sections/hello-world.liquid
+++ b/sections/hello-world.liquid
@@ -3,7 +3,7 @@
     {% if section.settings.heading != blank %}
       <h1>{{ section.settings.heading }}</h1>
     {% endif %}
-    <v-btn color="primary" @click="count++">Counter <output>[[count]]</output></v-btn>
+    <button class="btn btn-primary" @click="count++">Counter [[count]]</button>
   </div>
 </section>
 
