--- a/src/entrypoints/base.scss
+++ b/src/entrypoints/base.scss
@@ -1,3 +1,10 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+@import "bootstrap-icons/font/bootstrap-icons.min.css";
+
+.footer{
+    width: 100%;
+    border: solid rgba(0, 0, 0, .15);
+    border-width: 1px 0;
+    -webkit-box-shadow: 0px -8px 28px 2px rgba(0,0,0,0.2);
+    -moz-box-shadow: 0px -8px 28px 2px rgba(0,0,0,0.2);
+    box-shadow: 0px -8px 28px 2px rgba(0,0,0,0.2);
+}
