--- a/src/entrypoints/base.scss
+++ b/src/entrypoints/base.scss
@@ -1,4 +1,5 @@
 @import "bootstrap-icons/font/bootstrap-icons.min.css";
+@import "bootstrap/dist/css/bootstrap.min.css";
 
 .footer{
     width: 100%;
