--- a/src/entrypoints/base.scss
+++ b/src/entrypoints/base.scss
@@ -8,3 +8,16 @@
     -moz-box-shadow: 0px -8px 28px 2px rgba(0,0,0,0.2);
     box-shadow: 0px -8px 28px 2px rgba(0,0,0,0.2);
 }
+
+.fill {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    overflow: hidden;
+
+    & > img{
+        flex-shrink: 0;
+        min-width: 100%;
+        min-height: 100%
+    }
+}
