Fixed gutter problem

--- a/sections/account-register.liquid
+++ b/sections/account-register.liquid
@@ -4,7 +4,7 @@
 
 <section id="account-register-form" {% unless background_image %} class="container w-50 mx-auto p-3 p-md-5" {% endunless %}>
   {%- if background_image -%}
-    <div class="row">
+    <div class="row m-0">
       <div class="col-12 col-md-6 fill d-none d-md-flex">
         <img class="img-fluid" src="{{ background_image | img_url }}" alt="{{ background_image.alt }}">
       </div>
