--- a/sections/account-login.liquid
+++ b/sections/account-login.liquid
@@ -9,7 +9,7 @@
   {% endunless %}
 >
   {%- if background_image -%}
-    <div class="row">
+    <div class="row m-0">
       <div class="col-12 col-md-6 fill d-none d-md-flex">
         <img class="img-fluid" src="{{ background_image | img_url }}" alt="{{ background_image.alt }}">
       </div>
