--- a/sections/account-login.liquid
+++ b/sections/account-login.liquid
@@ -11,61 +11,63 @@
   {%- if background_image -%}
     <div class="row m-0">
       <div class="col-12 col-md-6 fill d-none d-md-flex">
-        <img class="img-fluid" src="{{ background_image | img_url }}" alt="{{ background_image.alt }}">
+        <img class="img-fluid" src="{{ background_image | img_url: "1200x1200" }}" alt="{{ background_image.alt }}">
       </div>
       <div class="col-12 col-md-6 container px-auto p-3 p-md-5">
   {%- endif -%}
-  <h1 class="mb-3 text-center">Login</h1>
-  {% form 'customer_login' %}
-    {%- if form.errors -%}
-      <h5 class="text-danger" tabindex="-1" autofocus>{{ form.errors | default_errors }}</h5>
-    {%- endif -%}
-    <div class="mb-3">
-      <label for="RegisterForm-email" class="form-label">Email address</label>
-      <input
-        type="email"
-        name="customer[email]"
-        class="form-control"
-        id="LoginForm-email"
-        spellcheck="false"
-        autocapitalize="off"
-        autocorrect="off"
-        autocomplete="email"
-        aria-required="true"
-        {% if form.errors contains 'email' %}
-          aria-invalid="true"
-        {% endif %}
-        placeholder="xxxxxx@xxx.com"
+    <h1 class="mb-3 text-center">Login</h1>
+    <div class="container-sm">
+    {% form 'customer_login' %}
+      {%- if form.errors -%}
+        <h5 class="text-danger" tabindex="-1" autofocus>{{ form.errors | default_errors }}</h5>
+      {%- endif -%}
+      <div class="mb-3">
+        <label for="RegisterForm-email" class="form-label">Email address</label>
+        <input
+          type="email"
+          name="customer[email]"
+          class="form-control"
+          id="LoginForm-email"
+          spellcheck="false"
+          autocapitalize="off"
+          autocorrect="off"
+          autocomplete="email"
+          aria-required="true"
+          {% if form.errors contains 'email' %}
+            aria-invalid="true"
+          {% endif %}
+          placeholder="xxxxxx@xxx.com"
+        >
+      </div>
+      <div class="mb-3">
+        <label for="LoginForm-password" class="form-label">Password</label>
+        <input
+          type="password"
+          class="form-control"
+          id="LoginForm-password"
+          name="customer[password]"
+          value=""
+          aria-required="true"
+          autocomplete="current-password"
+          {% if form.errors contains 'password' %}
+            aria-invalid="true"
+          {% endif %}
+          placeholder="123456abc"
+        >
+      </div>
+      <a class="link" href="#recover"> Forget password? </a>
+      <button
+        type="submit"
+        class="mt-3 btn btn-primary w-100"
       >
-    </div>
-    <div class="mb-3">
-      <label for="LoginForm-password" class="form-label">Password</label>
-      <input
-        type="password"
-        class="form-control"
-        id="LoginForm-password"
-        name="customer[password]"
-        value=""
-        aria-required="true"
-        autocomplete="current-password"
-        {% if form.errors contains 'password' %}
-          aria-invalid="true"
-        {% endif %}
-        placeholder="123456abc"
-      >
-    </div>
-    <a class="link" href="#recover"> Forget password? </a>
-    <button
-      type="submit"
-      class="mt-3 btn btn-primary w-100"
-    >
-      Login
-    </button>
-    <p class="text-center mt-3">
-      Don't have account yet?
-      <a class="link pe-auto" href="{{ routes.account_register_url }}">Register here</a>
-    </p>
-  {% endform %}
+        Login
+      </button>
+      <p class="text-center mt-3">
+        Don't have account yet?
+        <a class="link pe-auto" href="{{ routes.account_register_url }}">Register here</a>
+      </p>
+    {% endform %}
+  </div>
   {%- if background_image -%}
   </div>
 </div>
