--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -37,8 +37,10 @@
     <!-- shopify/apps -->
     {{ content_for_header }}
 
-    {{ 'bootstrap.min.css' | asset_url | stylesheet_tag }}
-    <script src="{{ 'bootstrap.bundle.min.js' | asset_url }}" defer="defer"></script>
+    {% comment %}
+      {{ 'bootstrap.min.css' | asset_url | stylesheet_tag }}
+      <script src="{{ 'bootstrap.bundle.min.js' | asset_url }}" defer="defer"></script>
+    {% endcomment %}
 
     {% liquid
       # Always add entrypoint below content_for_header
