--- a/src/entrypoints/base.scss
+++ b/src/entrypoints/base.scss
@@ -1,6 +1,3 @@
-@import "bootstrap-icons/font/bootstrap-icons.min.css";
-@import "bootstrap/scss/bootstrap.scss";
-
 .footer{
     width: 100%;
     border: solid rgba(0, 0, 0, .15);
@@ -22,3 +19,7 @@
         min-height: 100%
     }
 }
+
+@import "@/styles/custom.scss";
+@import "bootstrap-icons/font/bootstrap-icons.min.css";
+@import "bootstrap/scss/bootstrap.scss";
