--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -41,7 +41,7 @@
       </button>
       <div class="collapse navbar-collapse {% if is_center %}justify-content-center{% endif %}" id="header-menu">
         <ul class="navbar-nav">
-          <li class="nav-link d-md-none">
+          <li class="nav-link d-lg-none">
             <h6 class="dropdown-header">Menu</h6>
           </li>
           {%- for link in header_menu.links -%}
@@ -52,7 +52,7 @@
             </li>
           {%- endfor -%}
         </ul>
-        <ul class="navbar-nav d-md-none">
+        <ul class="navbar-nav d-lg-none">
           <li class="nav-link"><hr class="dropdown-divider"></li>
           <li class="nav-link">
             <h6 class="dropdown-header">Utilities</h6>
