--- a/sections/product-detail.liquid
+++ b/sections/product-detail.liquid
@@ -154,14 +154,17 @@
                   <div class="d-flex flex-column justify-content-center row-gap-2 mt-1 ">
                     <h5 class="fs-4 mb-0 fw-bold pe-2 pb-lg-1 pb-xl-0 d-flex column-gap-2">
                       <span
-                        v-if="chosenVariant.price"
+                        class="ml-2 "
                         :class="{'text-decoration-line-through fs-5': chosenVariant.compare_at_price}"
-                        >[[ `{{ cart.currency.symbol -}}
-                        ${chosenVariant.price?.toFixed(2)}` ]]</span
-                      >
-                      <span class="ml-2 fs-3" v-if="chosenVariant.compare_at_price"
+                        v-if="chosenVariant.compare_at_price"
                         >[[`{{ cart.currency.symbol -}}
                         ${chosenVariant.compare_at_price?.toFixed(2)}`]]</span
+                      >
+                      <span
+                        v-if="chosenVariant.price"
+                        class="fs-3"
+                        >[[ `{{ cart.currency.symbol -}}
+                        ${chosenVariant.price?.toFixed(2)}` ]]</span
                       >
                       <span v-else
                         >[[
