--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -87,8 +87,7 @@
             <li class="nav-link">
               <h6 class="dropdown-header">Welcome {{ customer.name }}</h6>
             </li>
-            <li class="nav-link"><a class="dropdown-item" href="/account">My Profile</a></li>
-            <li class="nav-link"><a class="dropdown-item" href="/customers/order">My Orders</a></li>
+            <li class="nav-link"><a class="dropdown-item" href="/account">My Orders</a></li>
             <li class="nav-link"><hr class="dropdown-divider"></li>
             <li class="nav-link">
               <a href="/account/logout" class="dropdown-item">Logout</a>
@@ -140,8 +139,7 @@
               <li>
                 <h6 class="dropdown-header">Welcome {{ customer.name }}</h6>
               </li>
-              <li><a class="dropdown-item" href="/account">My Profile</a></li>
-              <li><a class="dropdown-item" href="/customers/order">My Orders</a></li>
+              <li><a class="dropdown-item" href="/account">My Orders</a></li>
               <li><hr class="dropdown-divider"></li>
               <li>
                 <a href="/account/logout" class="dropdown-item">Logout</a>
